Update to new proto format (#237)
## tl;dr

- Companion PR to https://github.com/xmtp/proto/pull/223 which updates everything to the new format
