# pkg/proto/openapi/xmtpv4/message_api/message_api.swagger.json
@@ -24,7 +24,7 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/xmtpxmtpv4GetInboxIdsResponse"
+              "$ref": "#/definitions/xmtpv4message_apiGetInboxIdsResponse"
             }
           },
           "default": {
@@ -40,7 +40,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/xmtpxmtpv4GetInboxIdsRequest"
+              "$ref": "#/definitions/xmtpv4message_apiGetInboxIdsRequest"
             }
           }
         ],
@@ -49,15 +49,15 @@
         ]
       }
     },
-    "/mls/v2/publish-envelopes": {
+    "/mls/v2/publish-payer-envelopes": {
       "post": {
         "summary": "Publish envelope",
-        "operationId": "ReplicationApi_PublishEnvelopes",
+        "operationId": "ReplicationApi_PublishPayerEnvelopes",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/xmtpv4PublishEnvelopesResponse"
+              "$ref": "#/definitions/message_apiPublishPayerEnvelopesResponse"
             }
           },
           "default": {
@@ -73,7 +73,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/xmtpv4PublishEnvelopesRequest"
+              "$ref": "#/definitions/message_apiPublishPayerEnvelopesRequest"
             }
           }
         ],
@@ -90,7 +90,7 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/xmtpv4QueryEnvelopesResponse"
+              "$ref": "#/definitions/message_apiQueryEnvelopesResponse"
             }
           },
           "default": {
@@ -106,7 +106,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/xmtpv4QueryEnvelopesRequest"
+              "$ref": "#/definitions/message_apiQueryEnvelopesRequest"
             }
           }
         ],
@@ -126,13 +126,13 @@
               "type": "object",
               "properties": {
                 "result": {
-                  "$ref": "#/definitions/xmtpv4SubscribeEnvelopesResponse"
+                  "$ref": "#/definitions/message_apiSubscribeEnvelopesResponse"
                 },
                 "error": {
                   "$ref": "#/definitions/rpcStatus"
                 }
               },
-              "title": "Stream result of xmtpv4SubscribeEnvelopesResponse"
+              "title": "Stream result of message_apiSubscribeEnvelopesResponse"
             }
           },
           "default": {
@@ -148,7 +148,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/xmtpv4SubscribeEnvelopesRequest"
+              "$ref": "#/definitions/message_apiSubscribeEnvelopesRequest"
             }
           }
         ],
@@ -169,6 +169,161 @@
         }
       },
       "title": "RecoverableEcdsaSignature for EIP-191 and V2 signatures"
+    },
+    "envelopesBlockchainProof": {
+      "type": "object",
+      "properties": {
+        "blockNumber": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "publisherNodeId": {
+          "type": "integer",
+          "format": "int64"
+        }
+      },
+      "title": "An alternative to a signature for blockchain payloads"
+    },
+    "envelopesOriginatorEnvelope": {
+      "type": "object",
+      "properties": {
+        "unsignedOriginatorEnvelope": {
+          "type": "string",
+          "format": "byte",
+          "title": "Protobuf serialized"
+        },
+        "originatorSignature": {
+          "$ref": "#/definitions/associationsRecoverableEcdsaSignature"
+        },
+        "blockchainProof": {
+          "$ref": "#/definitions/envelopesBlockchainProof"
+        }
+      },
+      "title": "Signed originator envelope"
+    },
+    "envelopesPayerEnvelope": {
+      "type": "object",
+      "properties": {
+        "unsignedClientEnvelope": {
+          "type": "string",
+          "format": "byte",
+          "title": "Protobuf serialized"
+        },
+        "payerSignature": {
+          "$ref": "#/definitions/associationsRecoverableEcdsaSignature"
+        }
+      },
+      "title": "Wraps client envelope with payer signature"
+    },
+    "envelopesVectorClock": {
+      "type": "object",
+      "properties": {
+        "nodeIdToSequenceId": {
+          "type": "object",
+          "additionalProperties": {
+            "type": "string",
+            "format": "uint64"
+          }
+        }
+      },
+      "description": "The last seen entry per originator. Originators that have not been seen are omitted.\nEntries MUST be sorted in ascending order, so that smaller node ID's appear first."
+    },
+    "message_apiEnvelopesQuery": {
+      "type": "object",
+      "properties": {
+        "topics": {
+          "type": "array",
+          "items": {
+            "type": "string",
+            "format": "byte"
+          },
+          "title": "Client queries"
+        },
+        "originatorNodeIds": {
+          "type": "array",
+          "items": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "title": "Node queries"
+        },
+        "lastSeen": {
+          "$ref": "#/definitions/envelopesVectorClock"
+        }
+      },
+      "title": "Query for envelopes, shared by query and subscribe endpoints\nEither topics or originator_node_ids may be set, but not both"
+    },
+    "message_apiPublishPayerEnvelopesRequest": {
+      "type": "object",
+      "properties": {
+        "payerEnvelopes": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/envelopesPayerEnvelope"
+          }
+        }
+      }
+    },
+    "message_apiPublishPayerEnvelopesResponse": {
+      "type": "object",
+      "properties": {
+        "originatorEnvelopes": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/envelopesOriginatorEnvelope"
+          }
+        }
+      }
+    },
+    "message_apiQueryEnvelopesRequest": {
+      "type": "object",
+      "properties": {
+        "query": {
+          "$ref": "#/definitions/message_apiEnvelopesQuery"
+        },
+        "limit": {
+          "type": "integer",
+          "format": "int64"
+        }
+      },
+      "title": "Query envelopes request"
+    },
+    "message_apiQueryEnvelopesResponse": {
+      "type": "object",
+      "properties": {
+        "envelopes": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/envelopesOriginatorEnvelope"
+          }
+        }
+      },
+      "title": "Query envelopes response"
+    },
+    "message_apiSubscribeEnvelopesRequest": {
+      "type": "object",
+      "properties": {
+        "query": {
+          "$ref": "#/definitions/message_apiEnvelopesQuery"
+        }
+      },
+      "title": "Batch subscribe to envelopes"
+    },
+    "message_apiSubscribeEnvelopesResponse": {
+      "type": "object",
+      "properties": {
+        "envelopes": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/envelopesOriginatorEnvelope"
+          }
+        }
+      },
+      "title": "Streamed response for batch subscribe - can be multiple envelopes at once"
     },
     "protobufAny": {
       "type": "object",
@@ -198,175 +353,20 @@
         }
       }
     },
-    "xmtpv4BlockchainProof": {
-      "type": "object",
-      "properties": {
-        "blockNumber": {
-          "type": "string",
-          "format": "uint64"
-        },
-        "publisherNodeId": {
-          "type": "integer",
-          "format": "int64"
-        }
-      },
-      "title": "An alternative to a signature for blockchain payloads"
-    },
-    "xmtpv4EnvelopesQuery": {
-      "type": "object",
-      "properties": {
-        "topics": {
-          "type": "array",
-          "items": {
-            "type": "string",
-            "format": "byte"
-          },
-          "title": "Client queries"
-        },
-        "originatorNodeIds": {
-          "type": "array",
-          "items": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "title": "Node queries"
-        },
-        "lastSeen": {
-          "$ref": "#/definitions/xmtpv4VectorClock"
-        }
-      },
-      "title": "Query for envelopes, shared by query and subscribe endpoints\nEither topics or originator_node_ids may be set, but not both"
-    },
-    "xmtpv4OriginatorEnvelope": {
-      "type": "object",
-      "properties": {
-        "unsignedOriginatorEnvelope": {
-          "type": "string",
-          "format": "byte",
-          "title": "Protobuf serialized"
-        },
-        "originatorSignature": {
-          "$ref": "#/definitions/associationsRecoverableEcdsaSignature"
-        },
-        "blockchainProof": {
-          "$ref": "#/definitions/xmtpv4BlockchainProof"
-        }
-      },
-      "title": "Signed originator envelope"
-    },
-    "xmtpv4PayerEnvelope": {
-      "type": "object",
-      "properties": {
-        "unsignedClientEnvelope": {
-          "type": "string",
-          "format": "byte",
-          "title": "Protobuf serialized"
-        },
-        "payerSignature": {
-          "$ref": "#/definitions/associationsRecoverableEcdsaSignature"
-        }
-      },
-      "title": "Wraps client envelope with payer signature"
-    },
-    "xmtpv4PublishEnvelopesRequest": {
-      "type": "object",
-      "properties": {
-        "payerEnvelopes": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "$ref": "#/definitions/xmtpv4PayerEnvelope"
-          }
-        }
-      }
-    },
-    "xmtpv4PublishEnvelopesResponse": {
-      "type": "object",
-      "properties": {
-        "originatorEnvelopes": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "$ref": "#/definitions/xmtpv4OriginatorEnvelope"
-          }
-        }
-      }
-    },
-    "xmtpv4QueryEnvelopesRequest": {
-      "type": "object",
-      "properties": {
-        "query": {
-          "$ref": "#/definitions/xmtpv4EnvelopesQuery"
-        },
-        "limit": {
-          "type": "integer",
-          "format": "int64"
-        }
-      },
-      "title": "Query envelopes request"
-    },
-    "xmtpv4QueryEnvelopesResponse": {
-      "type": "object",
-      "properties": {
-        "envelopes": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "$ref": "#/definitions/xmtpv4OriginatorEnvelope"
-          }
-        }
-      },
-      "title": "Query envelopes response"
-    },
-    "xmtpv4SubscribeEnvelopesRequest": {
-      "type": "object",
-      "properties": {
-        "query": {
-          "$ref": "#/definitions/xmtpv4EnvelopesQuery"
-        }
-      },
-      "title": "Batch subscribe to envelopes"
-    },
-    "xmtpv4SubscribeEnvelopesResponse": {
-      "type": "object",
-      "properties": {
-        "envelopes": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "$ref": "#/definitions/xmtpv4OriginatorEnvelope"
-          }
-        }
-      },
-      "title": "Streamed response for batch subscribe - can be multiple envelopes at once"
-    },
-    "xmtpv4VectorClock": {
-      "type": "object",
-      "properties": {
-        "nodeIdToSequenceId": {
-          "type": "object",
-          "additionalProperties": {
-            "type": "string",
-            "format": "uint64"
-          }
-        }
-      },
-      "description": "The last seen entry per originator. Originators that have not been seen are omitted.\nEntries MUST be sorted in ascending order, so that smaller node ID's appear first."
-    },
-    "xmtpxmtpv4GetInboxIdsRequest": {
+    "xmtpv4message_apiGetInboxIdsRequest": {
       "type": "object",
       "properties": {
         "requests": {
           "type": "array",
           "items": {
             "type": "object",
-            "$ref": "#/definitions/xmtpxmtpv4GetInboxIdsRequestRequest"
+            "$ref": "#/definitions/xmtpv4message_apiGetInboxIdsRequestRequest"
           }
         }
       },
       "title": "Request to retrieve the XIDs for the given addresses"
     },
-    "xmtpxmtpv4GetInboxIdsRequestRequest": {
+    "xmtpv4message_apiGetInboxIdsRequestRequest": {
       "type": "object",
       "properties": {
         "address": {
@@ -375,20 +375,20 @@
       },
       "title": "A single request for a given address"
     },
-    "xmtpxmtpv4GetInboxIdsResponse": {
+    "xmtpv4message_apiGetInboxIdsResponse": {
       "type": "object",
       "properties": {
         "responses": {
           "type": "array",
           "items": {
             "type": "object",
-            "$ref": "#/definitions/xmtpxmtpv4GetInboxIdsResponseResponse"
+            "$ref": "#/definitions/xmtpv4message_apiGetInboxIdsResponseResponse"
           }
         }
       },
       "title": "Response with the XIDs for the requested addresses"
     },
-    "xmtpxmtpv4GetInboxIdsResponseResponse": {
+    "xmtpv4message_apiGetInboxIdsResponseResponse": {
       "type": "object",
       "properties": {
         "address": {
